[package]
name = "cwe-api-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
default-run = "cwe-api"

[[bin]]

name = "cwe-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
cwe-api = { path = "../cwe-api", version = "0.1.0" }
reqwest = { version = "0.11.27", features = ["json", "stream"] }
serde = "1.0.207"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
version = "3.0.0"
